--- a/src/component/textarea/Textarea.css
+++ b/src/component/textarea/Textarea.css
@@ -16,14 +16,26 @@ textarea{
 }
 
 
-@media screen and (max-width:860px){
+@media screen and (max-width:756px){
+    .textarea__input{
+        display: grid;
+        margin-bottom: 3rem;
+        position: relative;
+        top: 5rem;
+        right: 16.8rem;
+        width: 35rem;
+        max-width: inherit;
+    }
+    
+    }
+@media screen and (max-width:600px){
     .textarea__input{
         display: grid;
         margin-bottom: 3rem;
         position: relative;
         top: 0;
         right: 0;
-        width: 19rem;
+        width: 16.7rem;
     }
     
     }
