--- a/src/component/checkbox/CheckBox.css
+++ b/src/component/checkbox/CheckBox.css
@@ -1,33 +1,31 @@
-.checkbox{
-    position: relative;
-    top: 2.5rem;
-    margin-bottom: 4rem;
-    margin-left: 0rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: -6rem;
-    gap:0.6rem
-
+.checkbox {
+  position: relative;
+  top: 2.5rem;
+  margin-bottom: 4rem;
+  margin-left: 0rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: -6rem;
+  gap: 0.6rem;
 }
 
-.label__input{
-    font-size: 0.7rem;
-    margin-right: 3rem;
-    margin-top: 0.5rem;
+.label__input {
+  font-size: 0.7rem;
+  margin-right: 3rem;
+  margin-top: 0.5rem;
 }
 
-
-@media screen and (max-width:756px){
-.checkbox{
+@media screen and (max-width: 756px) {
+  .checkbox {
     margin-bottom: 0;
     margin-right: -8rem;
+  }
 }
-}
-@media screen and (max-width:600px){
-    .checkbox {
-        margin-bottom: 0px;
-        margin-right: 5rem;
-        top: -3rem;
-    }
+@media screen and (max-width: 600px) {
+  .checkbox {
+    margin-bottom: 0px;
+    margin-right: 5rem;
+    top: -3rem;
+  }
 }
