--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,121 +1,97 @@
-.app{
-    height: 100vh;
-    width: auto;
-    margin: -1rem 10rem 0 0;
-    display: grid;
-    place-content: center;
+.app {
+  height: 100vh;
+  width: auto;
+  margin: -1rem 10rem 0 0;
+  display: grid;
+  place-content: center;
 }
 
-form{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 35vw;
-}
- 
-button{
-    position: absolute;
-    top: 37rem;
-    display:grid;
-    padding: 0.8rem 17.3rem;
-    align-items:center;
-    border-radius:0.5rem;
-    outline: none;
-   
-    border:none;
-    text-transform: uppercase;
-    cursor:pointer;
+form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 35vw;
 }
 
-.contact__header{
-    margin-bottom:2rem;
+.contact__header {
+  margin-bottom: 2rem;
 }
 
-.header__title{
-    margin-bottom:1rem;
-    font-size: 1.4rem;
-    font-weight:700;
+.header__title {
+  margin-bottom: 1rem;
+  font-size: 1.4rem;
+  font-weight: 700;
 }
 
-.header__subtitle{
-    font-size: 0.9rem;
-    color: #5c5c5c;
-    font-weight:400;
+.header__subtitle {
+  font-size: 0.9rem;
+  color: #5c5c5c;
+  font-weight: 400;
 }
 
 .btn__submit {
-    margin: auto;
-    position: relative;
-top: 4rem;
-    right: 46%;
-    text-align: center;
+  margin: auto;
+  position: relative;
+  top: 4rem;
+  right: 46%;
+  text-align: center;
 }
 .submit {
+  margin: auto;
+  text-align: center;
+  width: 41rem !important;
+  padding: 1rem !important;
+  background-color: #066bf0 !important;
+  color: #ffffff !important;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition: 400ms all ease;
+}
+.contact__app {
+  width: 85vw;
+}
+footer {
+  width: 100%;
+}
+@media screen and (max-width: 756px) {
+  form {
     margin: auto;
-    text-align: center;
-    width: 41rem !important;
-    padding: 1rem !important;
-    background-color:#066bf0 !important;
-    color: #ffffff  !important;
-    text-decoration: none;
-    text-transform: capitalize;
-    transition: 400ms all ease;
-}
+    width: 75vw;
+  }
 
+  .app {
+    margin: -1rem 5rem 0 0;
+  }
 
-
-@media screen and (max-width:756px){
-    form{
-        margin:auto;
-        width: 75vw;
-    }
-
-    .app{
-        margin: -1rem 5rem 0 0;
-    }
-
-
-    button{
-    top: 36rem;
-    padding: 0.8rem 14.3rem;
-}
-
-.btn__submit {
-top: 6rem;
+  .btn__submit {
+    top: 6rem;
     right: 48%;
-}
-.submit {
+  }
+  .submit {
     width: 36rem !important;
     padding: 0.9rem !important;
+  }
 }
 
-}
+@media screen and (max-width: 600px) {
+  form {
+    grid-template-columns: 1fr;
+    margin: auto;
+    width: 24rem;
+  }
 
-@media screen and (max-width:600px){
-    form{
-        grid-template-columns: 1fr;
-        margin:auto;
-        width: 24rem;
-    }
-
-    .app{
+  .app {
     margin: -1rem 0 0 6rem;
-    }
+  }
 
-    .contact__header {
-        width: 70vw;
-    }
+  .contact__header {
+    width: 70vw;
+  }
 
-    button {
-        top: 37rem;
-        padding: 0.8rem 5.3rem;
-    }
-    
-    
-.btn__submit {
+  .btn__submit {
     top: -2rem;
     right: 15%;
-}
-.submit {
+  }
+  .submit {
     width: 16.9rem !important;
-}
+  }
 }
