--- a/src/component/textarea/Textarea.css
+++ b/src/component/textarea/Textarea.css
@@ -15,6 +15,19 @@ textarea{
     border: 1.9px solid #c4c3c3;
 }
 
+span{
+    font-size: 12px;
+    padding: 3px;
+    color: #ff0000;
+    display: none;
+  }
+  
+  .textarea:invalid[focused= "true" ]{
+    border: 1px solid #ff0000;
+  }
+  .textarea:invalid[focused= "true" ] ~ span{
+    display: block;
+  }
 
 @media screen and (max-width:756px){
     .textarea__input{
